# agent-finance

./: Cargo.toml  README.md  README_JA.md  README_KO.md  README_ZH.md  package.json
.github/workflows/: publish-npm.yml  test.yml
crates/binance/: Cargo.toml
crates/binance/src/: client.rs  exchange_rules.rs  lib.rs  metadata.rs  permissions.rs  signer.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  crypto_cli.rs  crypto_market_data.rs  lib.rs  main.rs  price.rs  signed_read.rs  skills.rs  terminal_app.rs  terminal_state.rs  terminal_write.rs
crates/cli/src/crypto_runtime/: evidence.rs  source.rs
crates/cli/src/providers/: capabilities.rs  mod.rs  okx.rs  sec_edgar.rs
crates/cli/src/providers/binance/: config.rs  tests.rs  websocket.rs
crates/cli/tests/: binance_live.rs  binance_live_write.rs  trading_cli.rs
crates/core/: Cargo.toml
crates/core/src/: audit.rs  capabilities.rs  intent.rs  lib.rs  paths.rs  profile.rs  risk.rs  submit.rs  types.rs
crates/market/src/: crypto_evidence_snapshot.rs  crypto_market_data.rs  history_snapshot.rs  lib.rs  market_symbol.rs  price.rs  service.rs  snapshot.rs
crates/market/src/crypto_runtime/: mod.rs  source.rs
crates/market/src/providers/: coingecko.rs  mod.rs
crates/trading/src/: lib.rs  write.rs
crates/tui/: Cargo.toml
crates/tui/src/: account.rs  account_controls.rs  account_holdings.rs  account_holdings_panel_view.rs  account_panel_view.rs  action_line_view.rs  app.rs  chart.rs  chart_overlay.rs  command.rs  config.rs  confirmation_dialog.rs  dump.rs  floating_input.rs  futures_state_ticket.rs  hints.rs  history_chart.rs  input.rs  intent_review_view.rs  keymap.rs  layout.rs  lib.rs  model.rs  mouse_target.rs  open_order_controls.rs  open_order_view.rs  order_ticket.rs  order_ticket_controls.rs  pane_status.rs  panel_action_line_view.rs  panel_input.rs  panel_mouse.rs  profile_editor.rs  profile_risk_controls.rs  profile_risk_panel_view.rs  profile_snapshot.rs  profile_validation_load.rs  provider_health.rs  read_only_panel_view.rs  render.rs  (+16 more)
crates/tui/src/app/: pending.rs
crates/tui/src/chart/: series.rs
crates/tui/src/input/: mouse_tests.rs
crates/tui/src/render/: account.rs  chrome.rs  futures_state.rs  history.rs  history_annotations.rs  history_glyphs.rs  intent_review.rs  open_orders.rs  order_ticket.rs  panels.rs  profile_policy.rs  profile_risk.rs  provider_health.rs  risk_audit.rs  settings.rs  tests.rs  ticket_panel.rs  transfer_ticket.rs  widgets.rs
crates/tui/src/scheduler/: mod.rs  write.rs
crates/tui/src/snapshots/: agent_finance_tui__render__tests__account_workspace_140x36.snap  agent_finance_tui__render__tests__command_palette_140x40.snap  agent_finance_tui__render__tests__history_workbench_120x32.snap  agent_finance_tui__render__tests__history_workbench_cursor_zoom_120x32.snap  agent_finance_tui__render__tests__history_workbench_readable_glyph_120x32.snap  agent_finance_tui__render__tests__market_workspace_100x30.snap  agent_finance_tui__render__tests__market_workspace_history_hover_100x30.snap  agent_finance_tui__render__tests__narrow_workspace_48x20.snap  agent_finance_tui__render__tests__overview_workspace_100x30.snap  agent_finance_tui__render__tests__research_workspace_140x36.snap  agent_finance_tui__render__tests__settings_workspace_120x32.snap  agent_finance_tui__render__tests__trade_workspace_140x36.snap
crates/tui/src/state/: config_undo.rs  interaction.rs  lifecycle.rs  load.rs  profile.rs  staged_change.rs  tests.rs  workspace.rs  (+1 more)
npm/: check-binary-links.js  check-package.js  create-platform-package.js  platform.js  postinstall.js  resolve-binary.js  smoke-tui.js
skill-data/core/: SKILL.md
skill-data/core/references/: command-map.md
skill-data/crypto/: SKILL.md
skill-data/history-indicators/: SKILL.md
skill-data/prediction-markets/: SKILL.md
skill-data/price/: SKILL.md
skill-data/profile/: SKILL.md
skill-data/providers/: SKILL.md
skill-data/research-data/: SKILL.md
skill-data/tui/: SKILL.md
skills/: core-full.md  core.md  crypto.md  futures.md  history-indicators.md  prediction-markets.md  price.md  providers.md  research-data.md
skills/agent-finance/: SKILL.md
src/: app.rs  cache.rs  cli.rs  crypto_app.rs  crypto_capabilities.rs  crypto_capability.rs  crypto_cli.rs  crypto_evidence.rs  crypto_market_data.rs  history.rs  http.rs  lib.rs  model.rs  output.rs  page_read.rs  price.rs  skills.rs  stream.rs  terminal_app.rs  terminal_cli.rs  terminal_state.rs  terminal_write.rs  time.rs
src/providers/: binance_futures.rs  capabilities.rs  cnbc.rs  coinbase.rs  coingecko.rs  mod.rs  okx.rs  robinhood.rs  sec_edgar.rs  stooq.rs  yahoo.rs
src/providers/binance/: aggregate.rs  mod.rs  quote_history.rs  rest.rs  symbol.rs  tests.rs  types.rs
src/providers/stooq/: catalog.rs
src/research/: fetchers.rs  highlights.rs  mod.rs
tests/: binance_live.rs  binance_live_write.rs  command_surface_cli.rs  trading_cli.rs
(+6 files in other folders)
