[package]
name = "agent-finance-cli"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/M4n5ter/agent-finance-cli"
description = "AI Agent-first CLI for no-key financial market data and research context."

[[bin]]
name = "agent-finance"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
futures-util = "0.3.32"
prost = "0.14.4"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
scraper = "0.27.0"
wreq = { version = "6.0.0-rc.29", default-features = false, features = ["cookies", "deflate", "gzip", "json", "socks", "system-proxy", "tokio-rt", "webpki-roots"] }
wreq-util = "3.0.0-rc.12"
