[package]
name = "agent-finance-binance"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/M4n5ter/agent-finance-cli"
description = "Internal Binance provider for the agent-finance terminal."

[dependencies]
agent-finance-core = { path = "../core" }
anyhow = "1.0.102"
chrono = "0.4.45"
hex = "0.4.3"
hmac = "0.13.0"
rust_decimal = { version = "1.42.1", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
url = "2.5.8"
wreq = { version = "6.0.0-rc.29", default-features = false, features = ["cookies", "deflate", "gzip", "json", "socks", "system-proxy", "tokio-rt", "webpki-roots"] }
