[package]
name = "agent-finance-binance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal Binance provider for the agent-finance terminal."

[dependencies]
agent-finance-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
rust_decimal = { workspace = true, features = ["serde-with-str"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
wreq.workspace = true
