[package]
name = "agent-finance-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal domain model for the agent-finance terminal."

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
directories.workspace = true
hex.workspace = true
rust_decimal = { workspace = true, features = ["serde-with-str"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
